Increased modal height to avoid scrollbar [#172518906]

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -80,7 +80,7 @@
 
     @include media-breakpoint-up(md) {
       padding: 1.5rem;
-      max-height: 61vh;
+      max-height: 63vh;
     }
   }
 
